tests/snapshots/integration__duration_date_values.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"language/duration_date_values\")"
---
5000
500
1704067200000
5500
