tests/snapshots/integration__duration_literal.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"language/duration_literal\")"
---
Created duration: 5 seconds
