tests/snapshots/integration__enum_match.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"language/enum_match\")"
---
Matched Err
