tests/snapshots/integration__env_args.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"stdlib/env_args\")"
---
Arg count received
Count: 0
