tests/snapshots/integration__env_args_cli.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"stdlib/env_args_cli\")"
---
Args count: 0
