tests/snapshots/integration__env_var.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"stdlib/env_var\")"
---
HOME found:
/root
Correctly handled missing variable
