tests/snapshots/integration__env_vector_args.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"stdlib/env_vector_args\")"
---
Args count: 0
No args
