tests/snapshots/integration__error_bool_arith.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"compiler/error_bool_arith\")"
---
Incompatible operator Plus for types Boolean and Boolean
